// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PersonalDetailsForm> > Renders with errors 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_formFeedback_99f247 _error_99f247"
    >
      This is a form error
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_firstname"
      >
        First name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_firstname"
          name="firstName"
          placeholder=""
          required=""
          type="text"
          value="Vince"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        this is wrong
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_lastname"
      >
        Last name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_lastname"
          name="lastName"
          placeholder=""
          required=""
          type="text"
          value="Guy"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        also this
      </div>
    </div>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_companyname"
      >
        Company name
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_companyname"
          name="companyName"
          placeholder=""
          type="text"
          value="JW Player"
        />
      </div>
    </div>
    <div
      class="_dateField_eb6974 _error_eb6974"
      data-testid="crf-datepicker"
      id="text-field_1235_birthdate"
      placeholder=""
    >
      <label
        class="_label_eb6974"
        for="text-field_1235_birthdate"
      >
        Birth date
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_eb6974"
      >
        <input
          class="_hiddenInput_eb6974"
          id="text-field_1235_birthdate-hidden"
          name="birthDate"
        />
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-date"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-month"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-year"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        February 30th? Really?
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_phonenumber"
      >
        Phone Number
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_phonenumber"
          name="phoneNumber"
          placeholder=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Invalid
      </div>
    </div>
    <div
      class="_textField_e16c1b _error_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_custom_1"
      >
        This is a text field
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_custom_1"
          name="custom_1"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Please enter some text
      </div>
    </div>
    <div
      class="_checkbox_531f07 _error_531f07"
      data-testid="crf-checkbox"
      placeholder=""
    >
      <div
        class="_row_531f07"
      >
        <input
          aria-required="false"
          id="check-box_1235_custom_2"
          name="custom_2"
          type="checkbox"
          value=""
        />
        <label
          for="check-box_1235_custom_2"
        >
          This is a checkbox field
        </label>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0 _helperTextError_531f07"
      >
        Check this box please!
      </div>
    </div>
    <div
      class="_error_d50e6e"
      data-testid="crf-radio"
      label="This is a radio field"
      placeholder=""
    >
      <div
        class="_header_d50e6e"
        data-testid="radio-header"
      >
        This is a radio field
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_custom_30"
          name="custom_3"
          required=""
          type="radio"
          value="option1"
        />
        <label
          for="radio_1235_custom_30"
        >
          Option 1
        </label>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_custom_31"
          name="custom_3"
          required=""
          type="radio"
          value="option2"
        />
        <label
          for="radio_1235_custom_31"
        >
          Option 2
        </label>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        It's only two choices
      </div>
    </div>
    <div
      class="_container_bb73c6 _fullWidth_bb73c6 _error_bb73c6 _medium_bb73c6"
      data-testid="crf-select"
    >
      <label
        class="_label_bb73c6"
        for="1235"
      >
        This is a select field
      </label>
      <div
        class="_dropdown_bb73c6 _fullWidth_bb73c6"
      >
        <select
          aria-required="true"
          class="_select_bb73c6"
          id="1235"
          name="custom_4"
          placeholder=""
        >
          <option
            class="_option_bb73c6"
            value="option1"
          >
            Option 1
          </option>
          <option
            class="_option_bb73c6"
            value="option2"
          >
            Option 2
          </option>
          <option
            class="_option_bb73c6"
            value="option3"
          >
            Option 3
          </option>
        </select>
      </div>
      <div
        class="_helperText_da58e0 _error_da58e0"
      >
        Select something...
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;

exports[`<PersonalDetailsForm> > Renders without crashing 1`] = `
<div>
  <form
    data-testid="personal_details-form"
    novalidate=""
  >
    <h2
      class="_title_8a9484"
    >
      personal_details.title
    </h2>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_firstname"
      >
        First name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_firstname"
          name="firstName"
          placeholder=""
          required=""
          type="text"
          value="Vince"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_lastname"
      >
        Last name
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_lastname"
          name="lastName"
          placeholder=""
          required=""
          type="text"
          value="Guy"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_companyname"
      >
        Company name
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_companyname"
          name="companyName"
          placeholder=""
          type="text"
          value="JW Player"
        />
      </div>
    </div>
    <div
      class="_dateField_eb6974"
      data-testid="crf-datepicker"
      id="text-field_1235_birthdate"
      placeholder=""
    >
      <label
        class="_label_eb6974"
        for="text-field_1235_birthdate"
      >
        Birth date
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_eb6974"
      >
        <input
          class="_hiddenInput_eb6974"
          id="text-field_1235_birthdate-hidden"
          name="birthDate"
        />
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-date"
          maxlength="2"
          name="date"
          placeholder="dd"
          type="number"
          value="27"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-month"
          maxlength="2"
          name="month"
          placeholder="mm"
          type="number"
          value="2"
        />
         / 
        <input
          class="_input_eb6974"
          id="text-field_1235_birthdate-year"
          maxlength="4"
          name="year"
          placeholder="yyyy"
          type="number"
          value="1985"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_phonenumber"
      >
        Phone Number
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_phonenumber"
          name="phoneNumber"
          placeholder=""
          type="text"
          value="+1 555 555 5555"
        />
      </div>
    </div>
    <div
      class="_textField_e16c1b"
      data-testid="crf-input"
    >
      <label
        class="_label_e16c1b"
        for="text-field_1235_custom_1"
      >
        This is a text field
        <span>
          optional
        </span>
      </label>
      <div
        class="_container_e16c1b"
      >
        <input
          class="_input_e16c1b"
          id="text-field_1235_custom_1"
          name="custom_1"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="_checkbox_531f07"
      data-testid="crf-checkbox"
      placeholder=""
    >
      <div
        class="_row_531f07"
      >
        <input
          aria-required="false"
          id="check-box_1235_custom_2"
          name="custom_2"
          type="checkbox"
          value=""
        />
        <label
          for="check-box_1235_custom_2"
        >
          This is a checkbox field
        </label>
      </div>
    </div>
    <div
      data-testid="crf-radio"
      label="This is a radio field"
      placeholder=""
    >
      <div
        class="_header_d50e6e"
        data-testid="radio-header"
      >
        This is a radio field
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_custom_30"
          name="custom_3"
          required=""
          type="radio"
          value="option1"
        />
        <label
          for="radio_1235_custom_30"
        >
          Option 1
        </label>
      </div>
      <div
        class="_radio_d50e6e"
      >
        <input
          id="radio_1235_custom_31"
          name="custom_3"
          required=""
          type="radio"
          value="option2"
        />
        <label
          for="radio_1235_custom_31"
        >
          Option 2
        </label>
      </div>
    </div>
    <div
      class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
      data-testid="crf-select"
    >
      <label
        class="_label_bb73c6"
        for="1235"
      >
        This is a select field
      </label>
      <div
        class="_dropdown_bb73c6 _fullWidth_bb73c6"
      >
        <select
          aria-required="true"
          class="_select_bb73c6"
          id="1235"
          name="custom_4"
          placeholder=""
        >
          <option
            class="_option_bb73c6"
            value="option1"
          >
            Option 1
          </option>
          <option
            class="_option_bb73c6"
            value="option2"
          >
            Option 2
          </option>
          <option
            class="_option_bb73c6"
            value="option3"
          >
            Option 3
          </option>
        </select>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="_button_f8f296 _continue_8a9484 _primary_f8f296 _fullWidth_f8f296 _large_f8f296"
      type="submit"
    >
      <span>
        personal_details.continue
      </span>
    </button>
  </form>
</div>
`;
